--- a/login.html
+++ b/login.html
@@ -62,6 +62,8 @@
         <div id="error-message" class="error-message"></div>
     </div>
 
+    <!-- Include CryptoJS library for AES encryption -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
     <script src="scfghjk.js"></script>
     <script>
         // Validate referrer
