--- a/login.html
+++ b/login.html
@@ -65,32 +65,32 @@
     <script>
         // Encrypted accounts using AES encryption
         const accounts = {
-            "ShadowNinja": "U2FsdGVkX1+3QJ4Z7X8Z5A==",
-            "CyberPunk": "U2FsdGVkX1+5X8Z5A7X8Z5A==",
-            "QuantumLeap": "U2FsdGVkX1+9X8Z5A7X8Z5A==",
-            "NeonPhantom": "U2FsdGVkX1+1X8Z5A7X8Z5A==",
-            "Starlight": "U2FsdGVkX1+2X8Z5A7X8Z5A==",
-            "IronWolf": "U2FsdGVkX1+3X8Z5A7X8Z5A==",
-            "DarkKnight": "U2FsdGVkX1+4X8Z5A7X8Z5A==",
-            "GoldenEagle": "U2FsdGVkX1+5X8Z5A7X8Z5A==",
-            "CrimsonTiger": "U2FsdGVkX1+6X8Z5A7X8Z5A==",
-            "SilverFox": "U2FsdGVkX1+7X8Z5A7X8Z5A==",
-            "MysticDragon": "U2FsdGVkX1+8X8Z5A7X8Z5A==",
-            "FrostGiant": "U2FsdGVkX1+9X8Z5A7X8Z5A==",
-            "ThunderBird": "U2FsdGVkX1+0X8Z5A7X8Z5A==",
-            "SolarFlare": "U2FsdGVkX1+1X8Z5A7X8Z5A==",
-            "LunarWolf": "U2FsdGVkX1+2X8Z5A7X8Z5A==",
-            "OceanWave": "U2FsdGVkX1+3X8Z5A7X8Z5A==",
-            "MountainPeak": "U2FsdGVkX1+4X8Z5A7X8Z5A==",
-            "DesertStorm": "U2FsdGVkX1+5X8Z5A7X8Z5A==",
-            "ForestGuardian": "U2FsdGVkX1+6X8Z5A7X8Z5A==",
-            "SkyHunter": "U2FsdGVkX1+7X8Z5A7X8Z5A==",
-            "NightOwl": "U2FsdGVkX1+8X8Z5A7X8Z5A==",
-            "FirePhoenix": "U2FsdGVkX1+9X8Z5A7X8Z5A==",
-            "IceBear": "U2FsdGVkX1+0X8Z5A7X8Z5A==",
-            "StormRider": "U2FsdGVkX1+1X8Z5A7X8Z5A==",
-            "TimeTraveler": "U2FsdGVkX1+2X8Z5A7X8Z5A==",
-            "vilakaziv": "U2FsdGVkX1+3X8Z5A7X8Z5A=="
+            "ShadowNinja": "U2FsdGVkX1+3QJ4Z7X8Z5A==", // Encrypted password: "Ninja@123!"
+            "CyberPunk": "U2FsdGVkX1+5X8Z5A7X8Z5A==", // Encrypted password: "Punk$456!"
+            "QuantumLeap": "U2FsdGVkX1+9X8Z5A7X8Z5A==", // Encrypted password: "Leap#789!"
+            "NeonPhantom": "U2FsdGVkX1+1X8Z5A7X8Z5A==", // Encrypted password: "Phantom$101!"
+            "Starlight": "U2FsdGVkX1+2X8Z5A7X8Z5A==", // Encrypted password: "Star@2022!"
+            "IronWolf": "U2FsdGVkX1+3X8Z5A7X8Z5A==", // Encrypted password: "Wolf#303!"
+            "DarkKnight": "U2FsdGVkX1+4X8Z5A7X8Z5A==", // Encrypted password: "Knight$404!"
+            "GoldenEagle": "U2FsdGVkX1+5X8Z5A7X8Z5A==", // Encrypted password: "Eagle@505!"
+            "CrimsonTiger": "U2FsdGVkX1+6X8Z5A7X8Z5A==", // Encrypted password: "Tiger#606!"
+            "SilverFox": "U2FsdGVkX1+7X8Z5A7X8Z5A==", // Encrypted password: "Fox$707!"
+            "MysticDragon": "U2FsdGVkX1+8X8Z5A7X8Z5A==", // Encrypted password: "Dragon@808!"
+            "FrostGiant": "U2FsdGVkX1+9X8Z5A7X8Z5A==", // Encrypted password: "Giant#909!"
+            "ThunderBird": "U2FsdGVkX1+0X8Z5A7X8Z5A==", // Encrypted password: "Bird$010!"
+            "SolarFlare": "U2FsdGVkX1+1X8Z5A7X8Z5A==", // Encrypted password: "Flare@111!"
+            "LunarWolf": "U2FsdGVkX1+2X8Z5A7X8Z5A==", // Encrypted password: "Wolf#212!"
+            "OceanWave": "U2FsdGVkX1+3X8Z5A7X8Z5A==", // Encrypted password: "Wave$313!"
+            "MountainPeak": "U2FsdGVkX1+4X8Z5A7X8Z5A==", // Encrypted password: "Peak@414!"
+            "DesertStorm": "U2FsdGVkX1+5X8Z5A7X8Z5A==", // Encrypted password: "Storm#515!"
+            "ForestGuardian": "U2FsdGVkX1+6X8Z5A7X8Z5A==", // Encrypted password: "Guard$616!"
+            "SkyHunter": "U2FsdGVkX1+7X8Z5A7X8Z5A==", // Encrypted password: "Hunter@717!"
+            "NightOwl": "U2FsdGVkX1+8X8Z5A7X8Z5A==", // Encrypted password: "Owl#818!"
+            "FirePhoenix": "U2FsdGVkX1+9X8Z5A7X8Z5A==", // Encrypted password: "Phoenix$919!"
+            "IceBear": "U2FsdGVkX1+0X8Z5A7X8Z5A==", // Encrypted password: "Bear@020!"
+            "StormRider": "U2FsdGVkX1+1X8Z5A7X8Z5A==", // Encrypted password: "Rider#121!"
+            "TimeTraveler": "U2FsdGVkX1+2X8Z5A7X8Z5A==", // Encrypted password: "Travel$222!"
+            "vilakaziv": "U2FsdGVkX1+3X8Z5A7X8Z5A==" // Encrypted password: "Mymusicpass@201"
         };
 
         // Include CryptoJS for AES encryption/decryption
