--- a/login.html
+++ b/login.html
@@ -7,8 +7,9 @@
     <link rel="icon" type="image/png" href="https://vgames1.github.io/vgamesblack.png">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
+            font-family: 'Arial', sans-serif;
+            background-color: #1a1a1a;
+            color: #fff;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -16,39 +17,59 @@
             margin: 0;
         }
         .login-container {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            background-color: #333;
+            padding: 30px;
+            border-radius: 15px;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
             text-align: center;
-            width: 300px;
+            width: 350px;
         }
         .login-container img {
             width: 100px;
             margin-bottom: 20px;
         }
+        .login-container h2 {
+            font-size: 24px;
+            margin-bottom: 20px;
+            color: #ff4b2b;
+        }
         .login-container input {
             width: 100%;
-            padding: 10px;
+            padding: 12px;
             margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
+            border: 1px solid #555;
+            border-radius: 8px;
+            background-color: #444;
+            color: #fff;
+            font-size: 16px;
+        }
+        .login-container input::placeholder {
+            color: #bbb;
         }
         .login-container button {
             background-color: #ff4b2b;
             border: none;
             color: #fff;
-            padding: 10px 20px;
-            border-radius: 5px;
+            padding: 12px 20px;
+            border-radius: 8px;
             cursor: pointer;
             width: 100%;
+            font-size: 16px;
+            transition: background-color 0.3s ease;
         }
         .login-container button:hover {
             background-color: #ff416c;
         }
         .error-message {
-            color: red;
+            color: #ff4b2b;
             margin-top: 10px;
+            font-size: 14px;
+        }
+        .verified-message {
+            color: #4caf50;
+            margin-top: 10px;
+            font-size: 16px;
+            font-weight: bold;
         }
     </style>
 </head>
@@ -60,37 +81,38 @@
         <input type="password" id="password" placeholder="Password">
         <button onclick="login()">Login</button>
         <div id="error-message" class="error-message"></div>
+        <div id="verified-message" class="verified-message"></div>
     </div>
 
     <script>
         // Encrypted accounts using AES encryption
         const accounts = {
-            "ShadowNinja": "U2FsdGVkX1+3QJ4Z7X8Z5A==", // Encrypted password: "Ninja@123!"
-            "CyberPunk": "U2FsdGVkX1+5X8Z5A7X8Z5A==", // Encrypted password: "Punk$456!"
-            "QuantumLeap": "U2FsdGVkX1+9X8Z5A7X8Z5A==", // Encrypted password: "Leap#789!"
-            "NeonPhantom": "U2FsdGVkX1+1X8Z5A7X8Z5A==", // Encrypted password: "Phantom$101!"
-            "Starlight": "U2FsdGVkX1+2X8Z5A7X8Z5A==", // Encrypted password: "Star@2022!"
-            "IronWolf": "U2FsdGVkX1+3X8Z5A7X8Z5A==", // Encrypted password: "Wolf#303!"
-            "DarkKnight": "U2FsdGVkX1+4X8Z5A7X8Z5A==", // Encrypted password: "Knight$404!"
-            "GoldenEagle": "U2FsdGVkX1+5X8Z5A7X8Z5A==", // Encrypted password: "Eagle@505!"
-            "CrimsonTiger": "U2FsdGVkX1+6X8Z5A7X8Z5A==", // Encrypted password: "Tiger#606!"
-            "SilverFox": "U2FsdGVkX1+7X8Z5A7X8Z5A==", // Encrypted password: "Fox$707!"
-            "MysticDragon": "U2FsdGVkX1+8X8Z5A7X8Z5A==", // Encrypted password: "Dragon@808!"
-            "FrostGiant": "U2FsdGVkX1+9X8Z5A7X8Z5A==", // Encrypted password: "Giant#909!"
-            "ThunderBird": "U2FsdGVkX1+0X8Z5A7X8Z5A==", // Encrypted password: "Bird$010!"
-            "SolarFlare": "U2FsdGVkX1+1X8Z5A7X8Z5A==", // Encrypted password: "Flare@111!"
-            "LunarWolf": "U2FsdGVkX1+2X8Z5A7X8Z5A==", // Encrypted password: "Wolf#212!"
-            "OceanWave": "U2FsdGVkX1+3X8Z5A7X8Z5A==", // Encrypted password: "Wave$313!"
-            "MountainPeak": "U2FsdGVkX1+4X8Z5A7X8Z5A==", // Encrypted password: "Peak@414!"
-            "DesertStorm": "U2FsdGVkX1+5X8Z5A7X8Z5A==", // Encrypted password: "Storm#515!"
-            "ForestGuardian": "U2FsdGVkX1+6X8Z5A7X8Z5A==", // Encrypted password: "Guard$616!"
-            "SkyHunter": "U2FsdGVkX1+7X8Z5A7X8Z5A==", // Encrypted password: "Hunter@717!"
-            "NightOwl": "U2FsdGVkX1+8X8Z5A7X8Z5A==", // Encrypted password: "Owl#818!"
-            "FirePhoenix": "U2FsdGVkX1+9X8Z5A7X8Z5A==", // Encrypted password: "Phoenix$919!"
-            "IceBear": "U2FsdGVkX1+0X8Z5A7X8Z5A==", // Encrypted password: "Bear@020!"
-            "StormRider": "U2FsdGVkX1+1X8Z5A7X8Z5A==", // Encrypted password: "Rider#121!"
-            "TimeTraveler": "U2FsdGVkX1+2X8Z5A7X8Z5A==", // Encrypted password: "Travel$222!"
-            "vilakaziv": "U2FsdGVkX1+3X8Z5A7X8Z5A==" // Encrypted password: "Mymusicpass@201"
+            "ShadowNinja": "U2FsdGVkX1+3QJ4Z7X8Z5A==", 
+            "CyberPunk": "U2FsdGVkX1+5X8Z5A7X8Z5A==", 
+            "QuantumLeap": "U2FsdGVkX1+9X8Z5A7X8Z5A==", 
+            "NeonPhantom": "U2FsdGVkX1+1X8Z5A7X8Z5A==", 
+            "Starlight": "U2FsdGVkX1+2X8Z5A7X8Z5A==",
+            "IronWolf": "U2FsdGVkX1+3X8Z5A7X8Z5A==", 
+            "DarkKnight": "U2FsdGVkX1+4X8Z5A7X8Z5A==", 
+            "GoldenEagle": "U2FsdGVkX1+5X8Z5A7X8Z5A==",
+            "CrimsonTiger": "U2FsdGVkX1+6X8Z5A7X8Z5A==", 
+            "SilverFox": "U2FsdGVkX1+7X8Z5A7X8Z5A==",
+            "MysticDragon": "U2FsdGVkX1+8X8Z5A7X8Z5A==",
+            "FrostGiant": "U2FsdGVkX1+9X8Z5A7X8Z5A==",
+            "ThunderBird": "U2FsdGVkX1+0X8Z5A7X8Z5A==", 
+            "SolarFlare": "U2FsdGVkX1+1X8Z5A7X8Z5A==", 
+            "LunarWolf": "U2FsdGVkX1+2X8Z5A7X8Z5A==", 
+            "OceanWave": "U2FsdGVkX1+3X8Z5A7X8Z5A==", 
+            "MountainPeak": "U2FsdGVkX1+4X8Z5A7X8Z5A==", 
+            "DesertStorm": "U2FsdGVkX1+5X8Z5A7X8Z5A==", 
+            "ForestGuardian": "U2FsdGVkX1+6X8Z5A7X8Z5A==",
+            "SkyHunter": "U2FsdGVkX1+7X8Z5A7X8Z5A==", 
+            "NightOwl": "U2FsdGVkX1+8X8Z5A7X8Z5A==", 
+            "FirePhoenix": "U2FsdGVkX1+9X8Z5A7X8Z5A==", 
+            "IceBear": "U2FsdGVkX1+0X8Z5A7X8Z5A==", 
+            "StormRider": "U2FsdGVkX1+1X8Z5A7X8Z5A==", 
+            "TimeTraveler": "U2FsdGVkX1+2X8Z5A7X8Z5A==", 
+            "vilakaziv": "U2FsdGVkX1+3X8Z5A7X8Z5A==" 
         };
 
         // Include CryptoJS for AES encryption/decryption
@@ -130,6 +152,9 @@
             // Decrypt and validate the password
             const decryptedPassword = CryptoJS.AES.decrypt(encryptedPassword, 'secret-key').toString(CryptoJS.enc.Utf8);
             if (decryptedPassword === password) {
+                // Display verification message
+                document.getElementById('verified-message').textContent = `Verified! Requested by: ${referrer}`;
+
                 // Send verification message to the parent window
                 const verificationMessage = {
                     status: "verified",
@@ -137,7 +162,7 @@
                     message: "Login successful!"
                 };
                 window.opener.postMessage(verificationMessage, `https://${referrer}`);
-                window.close(); // Close the login window
+                setTimeout(() => window.close(), 2000); // Close the login window after 2 seconds
             } else {
                 showError("Invalid username or password.");
             }
